name:                rpglib
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base
    , containers
    , folhs

  exposed-modules:
      RPGS.Game
    , RPGS.Parser
    , RPGS.Writer

  other-modules:
      OpenList
 
  hs-source-dirs:
      src/lib
  
  default-language:
    Haskell2010

executable rpgcross

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , containers
    , folhs
    , rpglib

  hs-source-dirs:
    src/tools/cross

  default-language:
    Haskell2010


executable rpgencode

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  other-modules:
      MuCLP
    , TSLT

  build-depends:
      base
    , containers
    , folhs
    , rpglib

  hs-source-dirs:
    src/tools/encode

  default-language:
    Haskell2010

executable rpgprint

  ghc-options:
    -Wall -Wno-name-shadowing

  main-is:
    Main.hs

  build-depends:
      base
    , rpglib

  hs-source-dirs:
    src/tools/print

  default-language:
    Haskell2010


